# pydrums

./: .gitignore  ARCHITECTURE.md  DATASET.md  EMBEDDING_INTEGRATION.md  LICENSE  README.md  compare_search_methods.py  pyproject.toml  regenerate_training_data.py  requirements.txt  test_260_source.py
.github/: copilot-instructions.md
data/: drum_machine_patterns_260.json  drum_machine_patterns_260_converted.json  training_data.json  training_data_backup.json
examples/: basic_usage.py
midi_output/: Create_a_funk_beat.mid  Create_a_funk_groove_with_ghost_notes.mid  Create_a_funky_afro-cuban_beat.mid  Create_a_jazz_shuffle_beat.mid  Generate_a_disco_four-on-the-floor_pattern.mid  Generate_an_afro-cuban_rhythm.mid  Make_a_reggae_one_drop_pattern.mid  Make_a_rock_ballad_pattern.mid  generated_patterns.json  test.mid
src/pydrums/: __init__.py  cli.py  data_loader.py  midi_converter.py  pattern_generator.py
src/pydrums.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
