[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydrums"
version = "0.1.0"
description = "AI-powered drum pattern generation and MIDI conversion"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Musicians",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["music", "drums", "ai", "midi", "patterns", "machine-learning"]

dependencies = [
    "ollama>=0.3.0",
    "mido>=1.3.0",
    "pretty_midi>=0.2.10",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
ml = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
]
audio = [
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "music21>=9.1.0",
]
docs = [
    "PyPDF2>=3.0.0",
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pydrums"
Repository = "https://github.com/yourusername/pydrums"
Documentation = "https://github.com/yourusername/pydrums#readme"

[project.scripts]
pydrums = "pydrums.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
